updated details for Chris

--- a/src/data/organizing_committee.yaml
+++ b/src/data/organizing_committee.yaml
@@ -61,7 +61,7 @@
   - name: Isabelle Augenstein
     organization: University of Copenhagen
   - name: Chris Brew
-    organization: Facebook, USA
+    organization: "[NA]"
 - title: Diversity & Inclusion Student Chairs
   members:
   - name: Murathan Kurfali
