added two pics and updated a couple of bits of metadata

--- a/src/data/organizing_committee.yaml
+++ b/src/data/organizing_committee.yaml
@@ -73,15 +73,17 @@
   - name: Jan-Christoph Klie
     organization: Technical University of Darmstadt, Germany
   - name: Yang Feng
-    organization: Institute of Computing Technology, China
+    organization: Chinese Academy of Sciences, China
   - name: Zhongyu Wei
     organization: Fudan University, China
   - name: Eduardo Blanco
     organization: University of North Texas, USA
-- title: Advisor, Virtual Infrastructure Committee
+- title: Advisors, Virtual Infrastructure Committee
   members:
   - name: Sudha Rao
     organization: Microsoft Research, USA
+  - name: Hao Fang
+    organization: Microsoft Semantic Machines, USA
 - title: ACL Business Manager & Local Arrangements Chair
   members:
   - name: Priscilla Rasmussen
