added hitachi sponsorship

--- a/src/data/sponsors.yaml
+++ b/src/data/sponsors.yaml
@@ -32,6 +32,8 @@
       link: https://www.naverlabs.com
     - name: Adobe
       link: https://adobe.com
+    - name: Hitachi
+      link: http://www.hitachi.com/rd/index.html
 - levelName: Bronze
   sponsors:
     - name: ISI
