updated lemao's image and fixed name spelling

--- a/src/data/organizing_committee.yaml
+++ b/src/data/organizing_committee.yaml
@@ -47,7 +47,7 @@
   members:
   - name: Jing Li
     organization: The Hong Kong Polytechnic University, Hong Kong
-  - name: Lemao Lio
+  - name: Lemao Liu
     organization: Tencent AI Lab, China
 - title: Publicity Chairs
   members:
