--- a/src/data/sponsors.yaml
+++ b/src/data/sponsors.yaml
@@ -24,6 +24,8 @@
       link: https://www.grammarly.com
     - name: ByteDance
       link: https://www.bytedance.com
+    - name: Zeta Alpha
+      link: https://www.zeta-alpha.com/
 - levelName: Silver
   sponsors:
     - name: Babelscape
