--- a/src/data/organizing_committee.yaml
+++ b/src/data/organizing_committee.yaml
@@ -68,7 +68,7 @@
   - name: Isabelle Augenstein
     organization: University of Copenhagen
   - name: Chris Brew
-    organization: "[NA]"
+    organization: LivePerson
 - title: Diversity & Inclusion Student Chairs
   members:
   - name: Murathan Kurfali
