added yangsong feng

--- a/src/data/organizing_committee.yaml
+++ b/src/data/organizing_committee.yaml
@@ -85,6 +85,8 @@
     organization: Fudan University, China
   - name: Eduardo Blanco
     organization: University of North Texas, USA
+  - name: Yangsong Feng
+    organization: Peking University
 - title: Advisors, Virtual Infrastructure Committee
   members:
   - name: Sudha Rao
