--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-transformer-yaml": "^2.2.23",
     "lodash": "^4.17.15",
     "lodash-webpack-plugin": "^0.11.4",
+    "moment": "^2.29.1",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.9.2",
     "parcel-bundler": "^1.12.4",
@@ -33,6 +34,8 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.2.2",
+    "react-popover": "^0.5.10",
+    "react-tiny-popover": "^6.0.0-beta.2",
     "remark": "^12.0.0",
     "remark-html": "^11.0.2",
     "slug": "^2.1.1",
