--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.1.3",
   "author": "Andy MacKinlay",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "date-fns": "^1.29.0",
     "gatsby": "^2.18.7",
     "gatsby-cli": "^2.7.47",
