clobber cache on each build, it's too flaky otherwise

--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
   "main": "n/a",
   "scripts": {
     "start": "npm run develop",
-    "clean": "rm -rf public",
-    "clobber": "rm -rf .cache public",
+    "clean": "rm -rf .cache public",
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
