--- a/src/data/sponsors.yaml
+++ b/src/data/sponsors.yaml
@@ -5,7 +5,7 @@
     - name: Google
       link: https://research.google
     - name: Apple
-      link: https://apple.com
+      link: https://www.apple.com/jobs/us/teams/machine-learning-and-ai.html
     - name: Amazon
       link: https://www.amazon.science
 - levelName: Platinum
